# azure-iot-apps

./: README.md  run.sh  setup_user_env.sh
Include_RTE_Comp/ensemble/: RTE_Components.h
cmake_rtss/: CMakeLists.txt  README.txt  rtss_compiler_config.cmake  rtss_gcc_compiler_config.cmake  utilities_func.cmake
cmake_rtss/device_cmake/: b0_device.cmake
cmake_rtss/drivers_cmake/: bolt_drivers.cmake
cmake_rtss/ensemble_cmake/: ensemble.cmake
cmake_rtss/netxduo_cmake/: netxduo.cmake
cmake_rtss/os_cmake/: threadx.cmake
cmake_rtss/toolchains/: arm-none-eabi-gcc.cmake  armclang_toolchain.cmake
source/bolt_extsys_driver/GPIO/Source/: Driver_GPIO.c
source/bolt_extsys_driver/UART/: Driver_USART.c
source/bolt_extsys_driver/azure-rtos/netxduo/modem/: nx_modem_driver.c  nx_modem_driver.h  nx_modem_driver_private.h  nx_modem_user.h
source/netxduo/addons/azure_iot/samples/: main.c  sample_azure_iot_embedded_sdk.c  sample_config.h
source/netxduo/common/inc/: nx_api.h  nx_icmpv6.h
source/netxduo/common/src/: nx_icmpv6_process_ra.c  nxd_ipv6_stateless_address_autoconfig_disable.c  nxd_ipv6_stateless_address_autoconfig_enable.c
source/rtss_device/E7/AE722F80F55D5XX/: RTE_Device.h
source/threadx/ports/cortex_m55/gnu/src/: tx_initialize_low_level.S
source/threadx/ports_module/cortex_a7/gnu/example_build/: build_threadx_module_library.bat
